--- a/.github/workflows/feature-development.yml
+++ b/.github/workflows/feature-development.yml
@@ -4,12 +4,11 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - 'feature/*'
+      - "feature/*"
 
 permissions:
-  id-token: write # This is required for requesting the JWT
-  contents: read  # This is required for actions/checkout
-  
+  contents: read # This is required for actions/checkout
+
 jobs:
   dotnet-ci:
     runs-on: ubuntu-latest
@@ -21,7 +20,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
         src-folder: "src"
-        majorMinorVersion: "1.0"
+        majorMinorVersion: "1.1"
 
   publish-nuget-packages:
     environment: NuGet
@@ -29,10 +28,9 @@ jobs:
     needs: [dotnet-ci]
 
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - uses: frasermolyneux/actions/publish-nuget-packages@main
-        with:
-          artifact-name: "nuget-packages"
-          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-          
+    - uses: frasermolyneux/actions/publish-nuget-packages@main
+      with:
+        artifact-name: "nuget-packages"
+        NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
