--- a/.github/workflows/release-to-production.yml
+++ b/.github/workflows/release-to-production.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: "0 3 * * 1" # Every Monday at 3am
+    - cron: "0 3 * * 4" # Weekly Thursday at 3am UTC (standardized)
 
 permissions:
   contents: read # This is required for actions/checkout
