--- a/.github/workflows/codequality.yml
+++ b/.github/workflows/codequality.yml
@@ -1,11 +1,15 @@
 name: Code Quality
 
 on:
+  schedule:
+    - cron: "0 3 * * 1" # Monday 3am UTC
   push:
     branches:
       - main
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches:
+      - main
+    types: [opened, synchronize, reopened, ready_for_review]
 
 permissions:
   contents: read
@@ -17,8 +21,24 @@ jobs:
     uses: frasermolyneux/actions/.github/workflows/codequality.yml@main
     with:
       sonar-project-key: frasermolyneux_cod-demo-reader
+      sonar-organization: frasermolyneux
+      sonar-host-url: https://sonarcloud.io
       build-target: dotnet-ci
-      dotnet-version: 9.0.x
+      dotnet-version: |
+        9.0.x
+        10.0.x
       src-folder: src
     secrets:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  dependency-review:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: read
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v6
+      - name: Dependency Review
+        uses: actions/dependency-review-action@v4
