--- a/src/MX.CodDemoReader/MX.CodDemoReader.csproj
+++ b/src/MX.CodDemoReader/MX.CodDemoReader.csproj
@@ -1,17 +1,18 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFramework>net9.0</TargetFramework>
-	<RootNamespace>XtremeIdiots.CallOfDuty.DemoReader</RootNamespace>
+	<TargetFrameworks>net9.0;net10.0</TargetFrameworks>
+	<RootNamespace>MX.CodDemoReader</RootNamespace>
 	<ImplicitUsings>enable</ImplicitUsings>
 	<Nullable>enable</Nullable>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	<PackageId>XtremeIdiots.CallOfDuty.DemoReader</PackageId>
+	<PackageId>MX.CodDemoReader</PackageId>
+	<AssemblyName>MX.CodDemoReader</AssemblyName>
 	<Authors>Fraser Molyneux</Authors>
-	<Company>XtremeIdiots</Company>
-	<Product>XtremeIdiots Portal</Product>
+	<Company>MX</Company>
+	<Product>MX Cod Demo Reader</Product>
 	<Title>Call of Duty Huffman Demo Reader</Title>
-	<Description>Enabled the reading of metadata from Call of Duty 2,4,5 Huffman Demo Files</Description>
+	<Description>Enables reading metadata from Call of Duty 2/4/5 Huffman demo files.</Description>
 	<PackageProjectUrl>https://github.com/frasermolyneux/cod-demo-reader</PackageProjectUrl>
 	<RepositoryUrl>https://github.com/frasermolyneux/cod-demo-reader</RepositoryUrl>
 	<RepositoryType>git</RepositoryType>
