--- a/.github/workflows/pr-verify.yml
+++ b/.github/workflows/pr-verify.yml
@@ -7,6 +7,8 @@ on:
     types: [opened, synchronize, reopened, ready_for_review]
 
 
+permissions: read-all
+
 jobs:
   build-and-test:
     permissions:
