chore: Update permissions in workflow files for consistency and clarity (#17)
* chore: Update permissions in workflow files for consistency and clarity

* feat: Add devops-secure-scanning job with appropriate permissions in code quality workflow

* feat: Add read-all permissions to multiple workflow files for consistency

* chore: Add newline at the end of codequality.yml for consistency

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,11 +7,13 @@ on:
       - "bugfix/**"
       - "hotfix/**"
 
-permissions:
-  contents: read
+
+permissions: read-all
 
 jobs:
   build-and-test:
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     steps:
       - uses: frasermolyneux/actions/dotnet-ci@dotnet-ci/v1.1
