--- a/.github/workflows/pr-verify.yml
+++ b/.github/workflows/pr-verify.yml
@@ -6,11 +6,13 @@ on:
       - main
     types: [opened, synchronize, reopened, ready_for_review]
 
-permissions:
-  contents: read
+
+permissions: read-all
 
 jobs:
   build-and-test:
+    permissions:
+      contents: read
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
