--- a/.github/workflows/release-publish-nuget.yml
+++ b/.github/workflows/release-publish-nuget.yml
@@ -7,12 +7,14 @@ on:
     types:
       - completed
 
-permissions:
-  contents: write
-  actions: read
+
+permissions: read-all
 
 jobs:
   publish-nuget-packages:
+    permissions:
+      contents: write
+      actions: read
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     environment: NuGet
     runs-on: ubuntu-latest
