--- a/.github/workflows/pr-verify.yml
+++ b/.github/workflows/pr-verify.yml
@@ -6,14 +6,13 @@ on:
       - main
     types: [opened, synchronize, reopened, ready_for_review, labeled, unlabeled]
 
-
 permissions: {}
 
 jobs:
   build-and-test:
     permissions:
       contents: read
-    if: github.event.pull_request.draft == false && github.event.pull_request.user.login != 'dependabot[bot]'
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - uses: frasermolyneux/actions/dotnet-ci@dotnet-ci/v1.3
