--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,10 +4,24 @@ updates:
     assignees: ["frasermolyneux"]
     directory: "/src"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "06:30"
+      timezone: "Etc/UTC"
+    groups:
+      nuget:
+        patterns:
+          - "*"
 
   - package-ecosystem: "github-actions"
     assignees: ["frasermolyneux"]
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "06:30"
+      timezone: "Etc/UTC"
+    groups:
+      github-actions:
+        patterns:
+          - "*"
